<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".EncryptActivity">

    <TextView android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <EditText
        android:id="@+id/Input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_message"
        android:layout_below="@id/text"/>

    <Button
        android:id="@+id/enbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/encrypt_by_public_key"
        android:layout_below="@id/Input"/>

    <TextView android:id="@+id/encrypted_message_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/encrypted_message_label"
        android:layout_below="@id/enbutton"/>

    <EditText
        android:id="@+id/raw"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="top|left"
        android:text="@string/encrypted_message"
        android:layout_below="@+id/encrypted_message_label"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/debutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/decrypt_button"
        android:layout_below="@id/raw"/>

    <TextView android:id="@+id/original_message_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/original_message_label"
        android:layout_below="@id/debutton" />

    <EditText
        android:id="@+id/OriginText"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="top|left"
        android:text="@string/original_message"
        android:layout_below="@+id/original_message_label" />



</RelativeLayout>
